samples/_failures_safe/1761722375_d9904c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5b57b33.c: In function ‘main’:
./samples/SAFE/__tmp_c5b57b33.c:154:5: error: expected declaration or statement at end of input
  154 |     for (int i = 0; i < edges; i++) {
      |     ^~~
./samples/SAFE/__tmp_c5b57b33.c:154:5: error: expected declaration or statement at end of input
